# mdformat-recover-urls

./: .gitignore  README.md  pyproject.toml  test.py
mdformat_recover_urls/: __init__.py  plugin.py
